Colspan not working correctly when block type element in <td> https://bugs.webkit.org/show_bug.cgi?id=3820 rdar://96534555

Reviewed by NOBODY (OOPS!).

AutoTableLayout computes the layout of the table and distribute the
required width and heights. In this file, the function
calcEffectiveLogicalWidth() is in charge of computing the colspan cells,
aka cells being distributed over multiple columns.

After initializing the core structure of the table, the function will
collect the number of spanned cells in m_spanCells and then will
initialize the effective values, before processing each spanning cells
in:

    for (size_t i = 0; i < m_spanCells.size(); ++i) { }

1. after getting the information for each cell including width and
its width type (auto, percent, fixed), and the width of the content, the
number of columns it spans.
2. This will result in flags that will help determine what to apply later.
3. handle percentage spanning cells.
4. distribute min width requirements
4.1 all fixed columns
4.2 all percentage columns
4.3 100% column with auto (THIS BUG!)
4.4 mixed percent and auto
4.5 general mixed case

Then it will finish handling a couple of special cases for colspan, like
empty cells.

The NEW CASE, this is fixing is about:
Mixed columns where one has width >= 100% and others are auto

<table>
  <tr>
    <td colspan="2"><div style="width: 200px">Wide</div></td>
  </tr>
  <tr>
    <td>A</td>              <!-- Auto width -->
    <td width="100%">B</td> <!-- 100% width -->
  </tr>
</table>

Safari was giving more space than to the cell with A, than in other
browsers. With this patch the cell with B will occupy all the maximum
space possible and constraint the width of the cell with A to its
minimum possible size conditioned by its content, and not larger.

This will match the behavior of Chrome and Firefox.

* Source/WebCore/rendering/AutoTableLayout.cpp:
(WebCore::AutoTableLayout::calcEffectiveLogicalWidth):